--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_hr.arb
@@ -12,8 +12,8 @@
   "skip": "Preskoči",
   "neutral": "Nepristran",
   "faq": "Često postavljena pitanja",
-  "message_half_test_done": "Keep swiping, you're 50% done!",
-  "message_five_cards_left": "Only 5 cards left to swipe :)",
+  "message_half_test_done": "Nastavi prelistavati, na pola si puta!",
+  "message_five_cards_left": "Samo 5 kartica je ostalo za prelistavanje :)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Čini se da ti je nestala internetska veza",
   "@@LanguagePage": "LanguagePage",
