--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_lt.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_lt.arb
@@ -12,18 +12,18 @@
   "skip": "Praleisti",
   "neutral": "Neturiu nuomonės",
   "faq": "DUK",
-  "message_half_test_done": "Keep swiping, you're 50% done!",
-  "message_five_cards_left": "Only 5 cards left to swipe :)",
+  "message_half_test_done": "Tęskite, jau įpusėjote!",
+  "message_five_cards_left": "Liko 5 kortelės:)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Panašu, kad neturite prieigos prie interneto",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Tęskime lietuviškai? :)",
+  "languagePageTitle": "Pratęskime lietuviškai? :)",
   "languagePageSubtitle": "Tai galima pakeisti vėliau nustatymuose.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Jeigu šis mielas balandis Jums nepadės  balsuoti  birželį, niekas nepadės.",
-  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
-  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
-  "entranceMatchesFoundQuote": "{count} matches found in the last 24h",
+  "entranceTitle2": "Braukite savo nuomonę klausimuose, kurie Jums rūpi.",
+  "entranceTitle3": "Raskite savo simpatiją ir bendrą kryptį, kurią palaikysite rinkimuose.",
+  "entranceMatchesFoundQuote": "{count} simpatijų per paskutines 24 valandas",
   "entranceStartButton": "Pradėti Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
   "hungary": "Vengrija",
@@ -45,64 +45,64 @@
   "onBoardingStep3Option5": "Kita",
   "onBoardingNotAnswerButton": "Nenoriu atskleisti",
   "onBoardingCardQuestion": "Neturiu žalio supratimo už ką balsuoti 2024 Europos Parlamento rinkimuose",
-  "onBoardingLastStepTitle": "Swipe according to your agreement",
+  "onBoardingLastStepTitle": "Braukite pagal savo pažiūras",
   "@@LoadingResultsPage": "LoadingResultsPage",
   "loadingResultsPageTitle1": "Jūsų personalizuoti rezultatai pakeliui:)",
   "loadingResultsPageTitle2": "Tai bus greičiau negu įsigyti Taylor Swift bilietus 👀 ",
-  "loadingResultsPageTitle3": "Finding matches with candidates lists in {country}  🔍",
-  "loadingResultsPageTitle4": "Almost ready, one last check...",
+  "loadingResultsPageTitle3": "Ieškoma simpatijų kandidatų sąrašams {country} 🔍",
+  "loadingResultsPageTitle4": "Beveik baigta, vienas paskutinis patikrinimas...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "A match and much more 👉👈",
-  "resultsPage1Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers 😌",
-  "resultsPage1Button": "Press to continue",
-  "resultsPage2_1Title": "Honestly, between the",
-  "resultsPage2_2Title": "and me, it’s kind of a Love Story (EU’s Version)",
-  "resultsPage3Title": "How close I am to European Parliament Groups",
-  "resultsPage4TitleTop": "Pro-EU Integration",
-  "resultsPage4TitleBottom": "Anti-EU Integration",
-  "resultsPage4TitleLeft": "Left",
-  "resultsPage4TitleRight": "Right",
+  "resultsPage1Title": "Kur kas daugiau negu simpatija 👉👈",
+  "resultsPage1Text": "Kituose ekranuose, atrasite Jums artimiausią grupę Europos Parlamente, taip pat joms priklausančius kandidatų sąrašus, už kuriuos galėtumėte balsuoti savo valstybėse. Taip pat radome kitus papildomus dalykus remiantis Jūsų atsakymais😌",
+  "resultsPage1Button": "Tęsti",
+  "resultsPage2_1Title": "Tiesą pasakius, tarp",
+  "resultsPage2_2Title": "ir manęs, yra šiokia tokia Love Story (EU’s Version)",
+  "resultsPage3Title": "Kaip arti esu Europos Parlamento grupių",
+  "resultsPage4TitleTop": "Už ES integraciją",
+  "resultsPage4TitleBottom": "Prieš ES integraciją",
+  "resultsPage4TitleLeft": "Kairė",
+  "resultsPage4TitleRight": "Dešinė",
   "resultsPage4TitleUserHere": "It’s me, hi!",
-  "resultsPage5Title": "On more specific topics, which European Parliament Group am I closer to?",
-  "resultsPage5Topic1": "Environmental issues",
-  "resultsPage5Topic2": "Human & Social Rights",
-  "resultsPage5Topic3": "Economic intervention",
-  "resultsPage6_1Title": "Ok, it's cool knowing which group gets me...",
-  "resultsPage6_2Title": "But at the EU Elections, we vote for a local list",
-  "resultsPage6Text": "In the next screens, you’ll discover the candidate lists in your country  that are most likely to join your match.",
-  "resultsPage7Title": "The candidates in {country} most aligned with {group}",
-  "resultsPage7Disclaimer": "In no particular order.",
-  "resultsPage7NoLocalCandidates": "No local parties found in {country}",
-  "resultsPage8_1Text": "On {topic}, you’re {percentage}% more into",
-  "resultsPage8_2Text": "Active Climate Action 🌱😌",
-  "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
-  "resultsPage9Help": "Click on the cards to shuffle",
-  "resultsPage9Text1": "Elections are about many topics, but there’s one thing that really",
+  "resultsPage5Title": "Kuriai Europos Parlamento grupei esu arčiau kai kuriais konkrečiais klausimais?",
+  "resultsPage5Topic1": "Aplinkosauga",
+  "resultsPage5Topic2": "Žmogaus ir socialinės teisės",
+  "resultsPage5Topic3": "Kišimasis į ekonomiką",
+  "resultsPage6_1Title": "Gerai, faina žinoti, kuri grupė mane supranta geriausiai...",
+  "resultsPage6_2Title": "Bet, EP rinkimuose, balsuojame už nacionalinį kandidatų sąrašą",
+  "resultsPage6Text": "Toliau pamatysite, kurie kandidatų sąrašai Jūsų valstybėje prisijungtų prie atitinkamos Europos Parlamento grupės, kuriai labiausiai pritariate.",
+  "resultsPage7Title": "Kandidatai {country} labiausiai save siejo su {group}",
+  "resultsPage7Disclaimer": "Atsitiktine eilės tvarka.",
+  "resultsPage7NoLocalCandidates": "Jokių nacionalinių partijų, rastų {country}",
+  "resultsPage8_1Text": "{topic} – {percentage} labiau linkstate prie",
+  "resultsPage8_2Text": "Aktyvi klimato politika 🌱😌",
+  "resultsPage8Help": "Esate kovotojas (-a) su klimato kaita! Tikite, kad klimato krizės pažabojimas reikalauja bendro veikimo, kad tai turėtų tapti kiekvieno prioritetu. Jums nekliūtų, jeigu ES stiprintų kompanijų reguliavimą dėl šio tikslo. Galų gale, kokia ekonominio augimo prasmė, jeigu planeta taptų nebegyvenama?",
+  "resultsPage9Help": "Spauskite ant kortelių, kad jas sumaišytumėte",
+  "resultsPage9Text1": "Rinkimai yra apie daugelį klausimų, bet yra vienas dalykas, kuris iš tikrųjų",
   "resultsPage9Text2": "Belongs With Me 😌",
-  "resultsPage10Title": "A notification when it’s time to go vote?",
-  "resultsPage10NopButton": "No thanks!",
-  "resultsPage10YesButton": "Yesssss",
-  "resultsShare": "Share",
+  "resultsPage10Title": "Pranešimas, kai ateis metas balsuoti?",
+  "resultsPage10NopButton": "Ne, dėkui!",
+  "resultsPage10YesButton": "Taaaaaaaaaip",
+  "resultsShare": "Dalintis",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} matches found in the last 24h",
-  "homePageBackToTest": "Back to the test",
-  "homePageMyResults": "My results",
-  "homePageStartButton": "Start a new test",
+  "homePageMatchesFoundQuote": "{count} simpatijų per paskutines 24 valandas",
+  "homePageBackToTest": "Atgal į testą",
+  "homePageMyResults": "Mano rezultatai",
+  "homePageStartButton": "Pradėti naują testą",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "I prefer to use this app in",
-  "settingsPageTextLanguage": "To change the language, click on the current one",
-  "settingsPageTitleAbout": "About",
-  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
-  "settingsPageTitleAssociation": "The association",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "Important to tell you that partners have no editorial power on the content of the app, which remains a non-partisan initiative with a clear goal: helping you understand who supports your opinions at the european and national levels.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Share",
-  "settingsPagePrivacyPolicy": "Data Protection",
-  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
+  "settingsPageTitleLanguage": "Kalba",
+  "settingsPageSubtitleLanguage": "Mieliau naudočiau šią aplikaciją",
+  "settingsPageTextLanguage": "Norint pakeisti kalbą, paspauskite ant dabartinės pasirinktos kalbos",
+  "settingsPageTitleAbout": "Apie",
+  "settingsPageTextAbout": "Palumba nėra kompanija, nėra politinė partija, nėra vyriausybė. Esame nepriklausoma, ne pelno siekianti asociacija, vienijanti daugiau negu 120 jaunų žmonių 🐦 visoje Europoje, kurie praeitų metų vasarą susibūrė ir nusprendė kurti šią aplikaciją. Turime vieną tikslą: padėti jums geriau suprasti kaip veikia Europos Parlamento rinkimai ir kurie kandidatų sąrašai atspindi jūsų idėjas. Tai žinodami, galėsite balsuoti drąsiai, žinodami, už kuriuos žmones reikėtų balsuoti, kurie palaiko jūsų prioritetus. Mūsų algoritmas yra atviro kodo, teiginiai, kuriuos braukiate buvo peržiūrėti politikos mokslininkų ir jūsų duomenys yra taip užkoduoti, kad mes neturime jokios galimybės kada nors identifikuoti jūsų :)",
+  "settingsPageTitleAssociation": "Asociacija",
+  "settingsPageTitlePartners": "Partneriai",
+  "settingsPageTextPartners": "Svarbu paminėti, kad partneriai neturi jokios įtakos redakcijai ar aplikacijos turiniui. Aplikacija yra nepartinė iniciatyva, turinti aiškų tikslą: padėti Jums geriau suprasti, kas atstovauja Jūsų nuomonėms europiniu ir nacionaliniu lygmeniu.",
+  "settingsPageSubtitle1": "Pagrindiniai rėmėjai",
+  "settingsPageSubtitle2": "Europiniai partneriai",
+  "settingsPageSubtitle3": "Akademiniai partneriai",
+  "settingsPageSubtitle4": "Nacionaliniai instituciniai partneriai",
+  "settingsPageSubtitle5": "Paslaugos teikėjai",
+  "settingsPageShareButtonText": "Dalintis",
+  "settingsPagePrivacyPolicy": "Duomenų apsauga",
+  "settingsPageShareText": "Jeigu šis mielas balandis nepadės jums apsispręsti, už ką balsuoti birželio mėnesį, niekas nepadės. Aš naudojausi šia aplikacija – tą turėtum padaryti ir tu:"
 }
