--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_pl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_pl.arb
@@ -12,8 +12,8 @@
   "skip": "Pomiń",
   "neutral": "Nie mam zdania",
   "faq": "FAQ",
-  "message_half_test_done": "Keep swiping, you're 50% done!",
-  "message_five_cards_left": "Only 5 cards left to swipe :)",
+  "message_half_test_done": "Przeciągaj dalej, 50% za Tobą!",
+  "message_five_cards_left": "Tylko 5 pytań do końca :)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Wygląda na to, że nie masz połączenia z internetem",
   "@@LanguagePage": "LanguagePage",
