--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_pt-PT.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_pt-PT.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "pt-PT",
-  "appName": "Palumba EU",
+  "appName": "Palumba UE",
   "shortAppName": "Palumba",
   "ok": "Ok",
   "yes": "Sim",
@@ -12,13 +12,13 @@
   "skip": "Saltar",
   "neutral": "Neutro",
   "faq": "Perguntas frequentes",
-  "message_half_test_done": "Keep swiping, you're 50% done!",
-  "message_five_cards_left": "Only 5 cards left to swipe :)",
+  "message_half_test_done": "Continue a deslizar, 50% está pronto!",
+  "message_five_cards_left": "Apenas 5 cartas para deslizar :)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Parece que não estás conectado à internet",
   "@@LanguagePage": "LanguagePage",
   "languagePageTitle": "Vamos continuar em Português? :)",
-  "languagePageSubtitle": "Isto pode ser alterado posteriormente nas configurações.",
+  "languagePageSubtitle": "Isto pode ser alterado posteriormente nas definições.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Se este pombinho fofo não puder ajudar-te a votar em junho, nada poderá.",
   "entranceTitle2": "Desliza a tua opinião sobre temas que são importantes para ti.",
@@ -36,7 +36,7 @@
   "sweden": "Suécia",
   "onBoardingStep1Title": "Onde vais votar?",
   "onBoardingStep1Subtitle": "Eu não sei",
-  "onBoardingStep2Title": "A minha idade",
+  "onBoardingStep2Title": "Minha idade",
   "onBoardingStep3Title": "Eu identifico-me como",
   "onBoardingStep3Option1": "Mulher",
   "onBoardingStep3Option2": "Homem",
@@ -45,16 +45,16 @@
   "onBoardingStep3Option5": "Outro",
   "onBoardingNotAnswerButton": "Prefiro não dizer",
   "onBoardingCardQuestion": "Não faço ideia em quem votar para as eleições europeias de 2024",
-  "onBoardingLastStepTitle": "Desliza conforme estejas de acordo",
+  "onBoardingLastStepTitle": "Deslize conforme a sua preferência",
   "@@LoadingResultsPage": "LoadingResultsPage",
   "loadingResultsPageTitle1": "Os teus resultados personalizados estão a caminho :)",
   "loadingResultsPageTitle2": "Isto será mais rápido do que conseguir bilhetes para Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "A encontrar matches com as listas de candidatos na/no {country} 🔍",
+  "loadingResultsPageTitle3": "Encontrar combinações com lista de candidatos em {country}  🔍",
   "loadingResultsPageTitle4": "Quase pronto, uma última verificação...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Um match e muito mais 👉👈",
   "resultsPage1Text": "Nas seguintes páginas, descobrirás o grupo que é mais compatível contigo no Parlamento da UE, as listas locais correspondentes para votar em junho no teu país, e até encontrámos algumas coisas extras com base nas tuas respostas 😌",
-  "resultsPage1Button": "Pressiona para continuar",
+  "resultsPage1Button": "Selecione para continuar",
   "resultsPage2_1Title": "Honestamente, entre o(a)",
   "resultsPage2_2Title": "e eu, é como uma Love Story (EU's Version)",
   "resultsPage3Title": "O quão perto estou dos grupos do Parlamento Europeu",
@@ -62,7 +62,7 @@
   "resultsPage4TitleBottom": "Contra Integração UE",
   "resultsPage4TitleLeft": "Esquerda",
   "resultsPage4TitleRight": "Direita",
-  "resultsPage4TitleUserHere": "Olá, sou eu!",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
   "resultsPage5Title": "Quanto a temas mais específicos, qual é o grupo do Parlamento Europeu ao qual estou mais próximo?",
   "resultsPage5Topic1": "Questões ambientais",
   "resultsPage5Topic2": "Direitos Humanos e Sociais",
@@ -102,7 +102,7 @@
   "settingsPageSubtitle3": "Parceiro Acadêmico",
   "settingsPageSubtitle4": "Parceiros Institucionais nacionais",
   "settingsPageSubtitle5": "Prestadores de serviços",
-  "settingsPageShareButtonText": "Compartilha",
+  "settingsPageShareButtonText": "Partilha",
   "settingsPagePrivacyPolicy": "Política de Privacidade",
-  "settingsPageShareText": "Se este pombinho fofo não puder ajudar-te a votar em junho, nada poderá. Eu usei esta app e tu também deverias usar:"
+  "settingsPageShareText": "Se este lindo pombo não te puder ajudar a votar em junho, nada ajudará. Eu usei esta App e tu devias também:"
 }
