--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sk.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sk.arb
@@ -8,22 +8,22 @@
   "cancel": "Zrušiť",
   "textContinue": "Pokračovať",
   "alertServerErrorTitle": "Ups!",
-  "alertServerErrorText": "Niečo sa pokazilo na našom serveri. Skúste to neskôr, prosím.",
+  "alertServerErrorText": "Niečo sa pokazilo na našom serveri. Skús to neskôr, prosím.",
   "skip": "Preskočiť",
   "neutral": "Neutrálne",
   "faq": "Často kladené otázky",
-  "message_half_test_done": "Keep swiping, you're 50% done!",
-  "message_five_cards_left": "Only 5 cards left to swipe :)",
+  "message_half_test_done": "Swajpuj ďalej, už si v polovici!",
+  "message_five_cards_left": "Už len 5 kariet do konca :)",
   "@@SplashPage": "SplashPage",
-  "splashPageNoInternet": "Vyzerá to, že nemáte pripojenie na internet",
+  "splashPageNoInternet": "Vyzerá to, že nemáš pripojenie na internet",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Pokračujme v slovenčina? :)",
-  "languagePageSubtitle": "Túto možnosť môžete neskôr zmeniť v nastaveniach.",
+  "languagePageTitle": "Pokračujme v slovenčine? :)",
+  "languagePageSubtitle": "Túto možnosť môžeš neskôr zmeniť v nastaveniach.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Ak vám tento roztomilý holub nepomôže v júni voliť, tak už nič.",
-  "entranceTitle2": "'Swipnite' (odlistujte) názory na témy, ktoré vás zaujímajú.",
+  "entranceTitle2": "'Swajpni' názory na témy, ktoré ťa zaujímajú.",
   "entranceTitle3": "Nájdite svoj 'match' (zhodu) a zorientujte sa v tom, koho voliť vo voľbách.",
-  "entranceMatchesFoundQuote": "{count} zhody nájdené za posledných 24 hodín",
+  "entranceMatchesFoundQuote": "{count} zhôd nájdených za ostatných 24 hodín",
   "entranceStartButton": "Spustiť Palumbu",
   "@@OnBoardingPage": "OnBoardingPage",
   "hungary": "Maďarsko",
@@ -45,18 +45,18 @@
   "onBoardingStep3Option5": "Inak",
   "onBoardingNotAnswerButton": "Nechcem uviesť",
   "onBoardingCardQuestion": "Nemám poňatia, koho budem voliť vo voľbách do Európskeho parlamentu v roku 2024",
-  "onBoardingLastStepTitle": "'Swipnite' (odlistujte) prstom podľa vašich preferencií",
+  "onBoardingLastStepTitle": "'Swajpni' prstom podľa tvojich preferencií",
   "@@LoadingResultsPage": "LoadingResultsPage",
   "loadingResultsPageTitle1": "Vaše personalizované výsledky sú na ceste :)",
   "loadingResultsPageTitle2": "Bude to rýchlejšie ako zohnať lístky na Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Vyhľadávanie zhody so zoznamami kandidátov v {country}",
+  "loadingResultsPageTitle3": "Vyhľadávanie zhody so zoznamami kandidátov v&nbsp;{country}",
   "loadingResultsPageTitle4": "Takmer hotovo, posledná kontrola...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Zhoda a oveľa viac 👉👈",
-  "resultsPage1Text": "Na nasledujúcich obrazovkách zistíte, s ktorou skupinou v Európskom parlamente sa najviac stotožňujete. Tiež nájdete príslušné kandidátne listiny, ktoré môžte v júni voliť vo svojej krajine. Na základe vašich odpovedí sme dokonca zistili niekoľko ďalších zaujímavostí 😌",
-  "resultsPage1Button": "Stlačte pre pokračovanie",
+  "resultsPage1Text": "Na nasledujúcich obrazovkách zistíš, s ktorou skupinou v&nbsp;Európskom parlamente sa najviac stotožňuješ. Tiež nájdeš príslušné kandidátne listiny, ktoré môžeš v&nbsp;júni voliť vo svojej krajine. Na základe tvojich odpovedí sme dokonca zistili niekoľko ďalších zaujímavostí 😌",
+  "resultsPage1Button": "Stlač pre pokračovanie",
   "resultsPage2_1Title": "Úprimne, medzi",
-  "resultsPage2_2Title": "a mnou, je to niečo ako Love Story (EÚ verzia)",
+  "resultsPage2_2Title": "a mnou je niečo ako Love Story (EÚ verzia)",
   "resultsPage3Title": "Ako blízko mám ku skupinám Európskeho parlamentu",
   "resultsPage4TitleTop": "Za európsku integráciu",
   "resultsPage4TitleBottom": "Proti európskej integrácii",
@@ -69,8 +69,8 @@
   "resultsPage5Topic3": "Hospodárska intervencia",
   "resultsPage6_1Title": "Ok, je super vedieť, ktorá skupina ma chápe...",
   "resultsPage6_2Title": "Vo voľbách do EÚ však hlasujeme za miestnych kandidátov",
-  "resultsPage6Text": "Na ďalších obrazovkách nájdete kandidátne listiny vo vašej krajine, ktoré sa s najväčšou pravdepodobnosťou pripoja k skupine s ktorou sa najviac zhodujete.",
-  "resultsPage7Title": "Kandidáti na {country}, ktorí sú najviac v súlade s {group}",
+  "resultsPage6Text": "Na ďalších obrazovkách nájdeš kandidátne listiny v tvojej krajine, ktoré sa s&nbsp;najväčšou pravdepodobnosťou pripoja k&nbsp;skupine, s&nbsp;ktorou sa najviac zhoduješ.",
+  "resultsPage7Title": "Kandidujúce subjekty za {country}, ktoré sa najviac zhodujú s {group}",
   "resultsPage7Disclaimer": "Bez určenia poradia.",
   "resultsPage7NoLocalCandidates": "Žiadne miestne strany sa na {country} nenašli",
   "resultsPage8_1Text": "V téme {topic} si na {percentage}% viac do",
@@ -84,7 +84,7 @@
   "resultsPage10YesButton": "Áááno",
   "resultsShare": "Zdielať",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} zhody nájdené za posledných 24 hodín",
+  "homePageMatchesFoundQuote": "{count} zhôd nájdených za ostatných 24 hodín",
   "homePageBackToTest": "Späť k testu",
   "homePageMyResults": "Moje výsledky",
   "homePageStartButton": "Spustenie nového testu",
@@ -102,7 +102,7 @@
   "settingsPageSubtitle3": "Akademický partner",
   "settingsPageSubtitle4": "Partneri z národných inštitúcií",
   "settingsPageSubtitle5": "Poskytovatelia služieb",
-  "settingsPageShareButtonText": "Zdielať",
+  "settingsPageShareButtonText": "Zdieľať",
   "settingsPagePrivacyPolicy": "Ochrana dát",
-  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
+  "settingsPageShareText": "Ak vám ani táto roztomilá holubička nepomôže ísť voliť v júni, tak už nič asi! Použil/a som túto aplikáciu a mali by ste aj vy:"
 }
