--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_sv-SE.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_sv-SE.arb
@@ -66,7 +66,7 @@
   "resultsPage5Title": "När det gäller mer specifika frågor, vilken av Europaparlamentets partigrupper står jag närmast?",
   "resultsPage5Topic1": "Miljöfrågor",
   "resultsPage5Topic2": "Mänskliga & Sociala Rättigheter",
-  "resultsPage5Topic3": "Ekonomisk Intervention",
+  "resultsPage5Topic3": "Ekonomisk intervention",
   "resultsPage6_1Title": "Okej, coolt att veta vilken grupp som fattar mig...",
   "resultsPage6_2Title": "Men vid EU-valet röstar vi på en lokal kandidatlista",
   "resultsPage6Text": "På följande sidor kommer du hitta listorna på kandidaterna i ditt land mest troliga att ingå i din match.",
