--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_tr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_tr.arb
@@ -8,17 +8,17 @@
   "cancel": "İptal",
   "textContinue": "Devam",
   "alertServerErrorTitle": "Ups!",
-  "alertServerErrorText": "Bizim tarafımızda bir sorun oluştu. Lütfen sonra tekrar deneyin.",
+  "alertServerErrorText": "Bizim tarafımızda bir sorun oluştu. Lütfen daha sonra tekrar dene.",
   "skip": "Atla",
-  "neutral": "Tarafsız",
+  "neutral": "Tarafsızım",
   "faq": "SSS",
   "message_half_test_done": "Kaydırmaya devam et, yolu yarıladın!",
   "message_five_cards_left": "Sadece 5 soru daha kaldı :)",
   "@@SplashPage": "SplashPage",
-  "splashPageNoInternet": "İnternet bağlantınız yok gibi gözüküyor",
+  "splashPageNoInternet": "İnternet bağlantın yok gibi gözüküyor",
   "@@LanguagePage": "LanguagePage",
   "languagePageTitle": "Türkçe devam edelim mi? :)",
-  "languagePageSubtitle": "Bu sonradan ayarlardan değiştirilebilir.",
+  "languagePageSubtitle": "Bunu daha sonra ayarlardan değiştirebilirsin.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Eğer bu şirin güvercin seni Haziranda oy kullanmaya ikna edemezse, hiçbir şey edemez.",
   "entranceTitle2": "Senin için önemli olan konuların üzerini kaydır.",
@@ -37,26 +37,26 @@
   "onBoardingStep1Title": "Nerede oy kullanacaksın?",
   "onBoardingStep1Subtitle": "Bilmiyorum",
   "onBoardingStep2Title": "Yaşım",
-  "onBoardingStep3Title": "Kendimi böyle tanımlıyorum",
+  "onBoardingStep3Title": "Kendimi şöyle tanımlıyorum",
   "onBoardingStep3Option1": "Kadın",
   "onBoardingStep3Option2": "Erkek",
   "onBoardingStep3Option3": "Gender-fluid",
   "onBoardingStep3Option4": "Non-binary",
   "onBoardingStep3Option5": "Başka",
-  "onBoardingNotAnswerButton": "Söylememeyi tercih ederim",
+  "onBoardingNotAnswerButton": "Belirtmemeyi tercih ederim",
   "onBoardingCardQuestion": "2024 Avrupa Seçimlerinde kime oy vereceğimle ilgili hiçbir fikrim yok",
   "onBoardingLastStepTitle": "Katılma durumuna göre kaydır",
   "@@LoadingResultsPage": "LoadingResultsPage",
   "loadingResultsPageTitle1": "Sana özel sonuçların yolda :)",
   "loadingResultsPageTitle2": "Bu Taylor Swift'e bilet almaktan daha çabuk olmalı 👀 ",
   "loadingResultsPageTitle3": "{country} adaylar listesiyle eşleşmeler bulunuyor 🔍",
-  "loadingResultsPageTitle4": "Neredeyse hazır, son bir şey...",
+  "loadingResultsPageTitle4": "Neredeyse hazır, son bir şey daha...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Bir eşleşme ve çok daha fazlası 👉👈",
   "resultsPage1Text": "Sonraki ekranlarda, Haziran ayında ülkendeki seçimlerde sana en uyumlu AB Parlemento Grubunu ve eşleşen Yerel listeyi keşfedeceksin, hatta verdiğin cevaplara göre fazladan birşeyler de bulduk 😌",
   "resultsPage1Button": "Devam etmek için dokun",
-  "resultsPage2_1Title": "Honestly, between the",
-  "resultsPage2_2Title": "and me, it’s kind of a Love Story (EU’s Version)",
+  "resultsPage2_1Title": "Dürüst olmak gerekirse,",
+  "resultsPage2_2Title": "ile benim aramda, bu tam Bir Aşk Hikayesi (AB Versiyonu)",
   "resultsPage3Title": "Avrupa Parlamento Grupları'na ne kadar yakınım",
   "resultsPage4TitleTop": "AB'ye Entegrasyon Yanlısı",
   "resultsPage4TitleBottom": "AB'ye Entegrasyon Karşıtı",
@@ -104,5 +104,5 @@
   "settingsPageSubtitle5": "Servis Sağlayıcılar",
   "settingsPageShareButtonText": "Paylaş",
   "settingsPagePrivacyPolicy": "Veri Koruma",
-  "settingsPageShareText": "If this cute pigeon can't help you vote in June, nothing will. I've used the app and you should too:"
+  "settingsPageShareText": "Eğer bu sevimli güvercin Haziran ayında oy kullanmana yardımcı olamazsa, hiçbir şey olamaz. Ben uygulamayı kullandım ve sen de kullanmalısın:"
 }
