--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_mt.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_mt.arb
@@ -12,8 +12,8 @@
   "skip": "Aqbeż",
   "neutral": "Newtrali",
   "faq": "Mistoqsijiet Komuni / FAQ",
-  "message_half_test_done": "Keep swiping, you're 50% done!",
-  "message_five_cards_left": "Only 5 cards left to swipe :)",
+  "message_half_test_done": "Wasalt f’nofs il mistoqsijiet, daqt tlesti!",
+  "message_five_cards_left": "Fadallek biss 5 mistoqsijiet xi twieġeb :)",
   "@@SplashPage": "SplashPage",
   "splashPageNoInternet": "Jidher li m'għandekx konnessjoni tal-internet",
   "@@LanguagePage": "LanguagePage",
